# Kuhandel

./: .gitignore  README.md  pyproject.toml  run_game.py  tes_game_syntax.py  test_syntax
.github/workflows/: ci.yaml
Commands/: commands.py
Game/: game.py
GameConfig/: gameConfig.py
Inputs/: inputs.py
Player/: players.py
Results/: results.py
data/: full_game.txt
src/: main.py
src/action_handlers/: bidding.py  trading.py
src/application/: play_auction.py  play_trade.py  show_stats.py
src/commands/: commands.py
src/game/: game.py  player_view.py
src/game_config/: game_config.py
src/inputs/: inputs.py
src/interface/: bot_interface.py  bot_interface_TODO.py  general_interface.py  human_interface.py  player_interface.py
src/io_handler/: console_inputs.py  console_outputs.py  inputs.py  outputs.py  parser.py
src/player/: payment_solver.py  players.py
src/return_types/: action.py  results.py
tests/: test_bidding.py  test_commands.py  test_game_logic.py
