[project]
name = "visualization"
version = "0.1.0"
description = "Simple version of card game Kuhhandel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commands",
            "src/game",
            "src/results",
            "src/player",
            "src/inputs",
            "src/game_config"
            ]

[tool.ruff]
line-length = 88
